<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.HomeFragment">

    <!--    Circle Image View-->
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circle_img"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="16dp"
        android:src="@drawable/ic_user_avatar" />

    <!--    Edit Profile Text-->
    <TextView
        android:id="@+id/txt_edit_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_margin="16dp"
        android:fontFamily="sans-serif-light"
        android:padding="5dp"
        android:text="@string/edit_profile"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        tools:ignore="RelativeOverlap" />

    <!--    Logout Profile Text-->
    <TextView
        android:id="@+id/txt_logout_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="16dp"
        android:layout_below="@id/txt_edit_profile"
        android:fontFamily="sans-serif-light"
        android:padding="5dp"
        android:text="@string/logout"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        tools:ignore="RelativeOverlap" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/circle_img"
        android:orientation="vertical"
        android:padding="20dp">

        <!--        First Name-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_name" />

        <TextView
            android:id="@+id/txt_input_first_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_name"
            android:fontFamily="sans-serif-medium"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <!--        Last Name-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/last_name" />

        <TextView
            android:id="@+id/txt_input_last_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_name"
            android:fontFamily="sans-serif-medium"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <!--        Email-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/email" />

        <TextView
            android:id="@+id/txt_input_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:fontFamily="sans-serif-medium"
            android:textColor="@android:color/black"
            android:textSize="16sp" />
    </LinearLayout>

</RelativeLayout>